# napari-steinpose

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  napari_steinpose.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  tox.ini
.github/workflows/: book.yml  test_and_deploy.yml
book/: _config.yml  _toc.yml  napari_steinpose.ipynb
src/napari_imc_analyzer/: __init__.py  _reader.py  imc_analysis.py  mcd_widget.py  napari.yaml
src/napari_imc_analyzer/_tests/: test_reader.py  test_widget.py
src/napari_steinpose/: __init__.py  _reader.py  folder_list_widget.py  imc_analysis.py  napari.yaml  steinpose_widget.py
src/napari_steinpose/_tests/: test_reader.py  test_widget.py
src/napari_steinpose/_tests/data/: test_steinpose1.tiff  test_steinpose2.tiff
