[metadata]
name = napari-imc-analyzer

description = A plugin to segment and analyze IMC data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/guiwitz/napari-imc-analyzer
author = Guillaume Witz
author_email = guillaume.witz@unibe.ch
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/guiwitz/napari-imc-analyzer/issues
    Documentation = https://github.com/guiwitz/napari-imc-analyzer#README.md
    Source Code = https://github.com/guiwitz/napari-imc-analyzer
    User Support = https://github.com/guiwitz/napari-imc-analyzer/issues

[options]
packages = find:
install_requires =
    cellpose
    numpy
    magicgui
    qtpy
    matplotlib
    napari-skimage-regionprops
    readimc

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-imc-analyzer = napari_imc_analyzer:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
